syntax = "proto3";
option optimize_for = SPEED;

package com.sysalto.report.serialization.common;


message ReportColor_proto {
    int32 r = 1;
    int32 g = 2;
    int32 b = 3;
    float opacity = 4;
}

message ReportTxt_proto {
    string txt = 1;
    RFont_proto font = 2;
}

message RFont_proto {
    int32 size = 1;
    string fontName = 2;
    RFontAttribute_proto attribute = 3;
    RColor_proto color = 4;
    OptionRFontFamily_proto externalFont = 5;
}


message OptionRFontFamily_proto {
    bool null = 1;
    RFontFamily_proto rFontFamily = 2;
}

message RFontFamily_proto {
    string name = 1;
    string regular = 2;
    OptionString_proto bold = 3;
    OptionString_proto italic = 4;
    OptionString_proto boldItalic = 5;
}


message OptionString_proto {
    bool null = 1;
    string string = 2;
}


enum RFontAttribute_proto {
    NORMAL = 0;
    BOLD = 1;
    ITALIC = 2;
    BOLD_ITALIC = 3;
}


message RColor_proto {
    int32 r = 1;
    int32 g = 2;
    int32 b = 3;
    float opacity = 4;
}


message BoundaryRect_proto {
    float left = 1;
    float bottom = 2;
    float right = 3;
    float top = 4;
}


message DirectDrawMovePoint_proto {
    float x = 1;
    float y = 2;
}

message DirectDrawLine_proto {
    float x = 1;
    float y = 2;
}

message DirectDrawCircle_proto {
    float x = 1;
    float y = 2;
    float radius = 3;
}


message DirectDrawArc_proto {
    float x = 1;
    float y = 2;
    float radius = 3;
    float start_angle = 4;
    float end_angle = 5;
}


message DirectDraw_proto {
    string code = 1;
}


message DirectDrawFill_proto {
    ReportColor_proto color = 1;
}

message DirectDrawClosePath_proto {

}

message DirectDrawStroke_proto {
    ReportColor_proto color = 1;
}

message DirectFillStroke_proto {
    bool fill = 1;
    bool stroke = 2;
}


message DirectDrawRectangle_proto {
    float x = 1;
    float y = 2;
    float width = 3;
    float height = 4;
}

message OptionLineDashType_proto {
    bool null = 1;
    LineDashType_proto lineDashType = 2;
}

message LineDashType_proto {
    int32 unit = 1;
    int32 phase = 2;
}